# SVM_cpp

./: CMakeLists.txt  README.md  data.csv  data1.csv  data2.csv
include/: optimization.h  svm.h
src/: main.cpp
